# TD_starter_pack

./: .gitattributes  .gitignore  .gitmodules  .lycheeignore  .mcp.example.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.fr.md  README.md  SECURITY.md  import_modules.py  justfile  lefthook.yml  lychee.toml  mise.toml  pyproject.toml  skills-lock.json  starter_pack.4.td-catalog.json  starter_pack.4.td-catalog.md  starter_pack.json  starter_pack.toe
.claude/: settings.json
.claude/hooks/: guard-destructive.mts  guard-destructive.test.mts  post-edit-lint.sh  pre-commit-lint.sh  run-hook.js  validate-on-stop.mts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
TDDocker/: CLAUDE.md  README.md  TDDocker.toe  pyproject.toml  test-compose.yml
TDDocker/TD_SLlidar_docker/: .env.example  CLAUDE.md  SECURITY.md  WINDOWS_SETUP.md  docker-compose.dev.yml  docker-compose.windows.yml  docker-compose.yml  dockerfile  instructions_fr.md  ros_entrypoint.sh
TDDocker/TD_SLlidar_docker/Touchdesigner/: TOUCHDESIGNER_SETUP.md  lidar_usb_setup.ps1  td_lidar_controller.py  usb_auto_attach.py
TDDocker/TD_SLlidar_docker/Touchdesigner/scripts/: lidar_config.py  lidar_ui_controller.py  lidar_websocket.py  simple_lidar_example.py
TDDocker/TD_SLlidar_docker/launch/: sllidar_osc_launch.py
TDDocker/TD_SLlidar_docker/osc_bridge/: osc_bridge_node.py
TDDocker/Tests/: td-overlay.yml  test-compose.yml  test-osc-compose.yml
TDDocker/docker/osc-test/: Dockerfile  osc_echo.py
TDDocker/python/td_docker/: __init__.py  compose.py  container_manager.py  docker_status.py  td_container_ext.py  td_docker_ext.py  validator.py  watchdog.py
TDDocker/python/td_docker/transports/: __init__.py  osc.py  websocket.py
TDDocker/python/tests/: conftest.py  test_compose.py  test_docker_status.py  test_ndi_regen.py  test_osc_bridge.py  test_setup_multi_project.py  test_validator.py  test_watchdog.py  test_websocket_bridge.py
_mcp_server/: .gitattributes  .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.ja.md  README.md  biome.json  docker-compose.yml  orval.config.ts  package-lock.json  package.json  pyproject.toml  server.json  tsconfig.json  vitest.config.ts  vitest.live.config.ts
_mcp_server/.github/: FUNDING.yml
_mcp_server/docker/: start.sh
_mcp_server/docs/: architecture.md  development.ja.md  development.md  installation.ja.md  installation.md
_mcp_server/mcpb/: manifest.json
_mcp_server/scripts/: checkSkillDrift.ts  enrichOperatorExamples.ts  formatPreview.ts  importTdDocs.ts  measureFormatterImpact.ts  resolveOpenApi.ts  showDetailedNodes.ts  syncApiServerVersions.ts  syncMcpServerVersions.ts  syncTdAssets.ts
_mcp_server/src/: cli.ts  index.ts
_mcp_server/td/: genHandlers.js
docs/: user-guide.en.md  user-guide.md
modules/: mcp_webserver_script.py  td.pyi
modules/mcp/: __init__.py
modules/td_helpers/: __init__.py  layout.py  mcp_helpers.py
modules/td_server/: Dockerfile  setup.py
modules/tests/: conftest.py  fake_td.py  test_api_service.py  test_builtin_stubs.py  test_context_aggregator.py  test_error_handling.py  test_indexer.py  test_integration_helpers.py  test_openapi_router.py  test_result.py  test_scan_script.py  test_serialization.py  test_starter_smoke.py  test_td_helpers_layout.py  test_td_helpers_network.py
modules/utils/: error_handling.py  logging.py  result.py  serialization.py  types.py  utils_logging.py  version.py
plans/2026-03-19/: add-dev-workflow-commands-to-claude-md-separate-check-from-t.md  lefthook-ci-parallelization.md  mise-toml-lefthook-ci-parallelization.md  pyright-upgrade-to-standard-claude-code-hooks.md  restructure-5-td-skills-to-gold-standard.md  trim-claude-md.md
plans/2026-03-20/: claude-code-hooks-td-starter-pack.md  epic-7-mcp-resources-mode-offline-pr1-51-52-2.md  epic-7-mcp-resources-mode-offline-pr1-51-52.md  epic-7-pr2-53-state-machine-online-offline-2.md  epic-7-pr2-53-state-machine-online-offline.md  issue-54-fusion-statique-live.md
plans/2026-03-21/: issue-54-fusion-statique-live-pr3-2.md  issue-54-fusion-statique-live-pr3.md
plans/2026-03-22/: audit-et-cl-ture-epics-0-5.md  epic-7-cl-ture-compartiment-e.md  epic-8-issue-57-catalogue-de-patterns-glsl.md  epic-8-issue-58-tools-mcp-get-glsl-pattern-search-glsl-patte-2.md  epic-8-issue-58-tools-mcp-get-glsl-pattern-search-glsl-patte.md  epic-8-issue-59-deploy-glsl-pattern.md  epic-8-issue-60-garde-fous-de-d-ploiement-glsl.md
plans/2026-03-24/: catalogue-local-de-projets-td-package-scan-search.md  epic-10-version-aware-docs-recherche-intelligente-67-71.md  epic-11-modes-de-s-curit-execute-python-script-72-73-74-75.md  guide-utilisateur-complet-docs-user-guide-md-fr-docs-user-gu.md  issue-100-align-nodes-when-they-are-created.md  issue-77-get-health-wait-for-td-am-lior-avec-retry-et-skip.md  issue-78-mode-docs-only-serveur-mcp-utilisable-sans-td.md  issue-79-config-client-standardis-e-et-documentation-onboard.md  mcp-server-crash-on-startup-unhandled-async-rejection-in-mcp.md  palette-td-deferred-to-issue-80.md  portabilit-commiter-mcp-json-pour-zero-friction-onboarding.md  pre-existing-biome-prettier-lint-errors-in-mcp-server.md  security-audit-remediation-td-starter-pack.md
plans/2026-03-25/: am-liorer-les-skills-td-avec-les-erreurs-accumul-es.md  analysis-bottobot-touchdesigner-mcp-server-vs-td-starter-pac.md  cr-er-une-issue-github-pour-le-support-des-extensions-tierce.md  issue-100-align-nodes-when-they-are-created.md  issue-80-index-et-recherche-dans-la-palette-touchdesigner-30.md  issue-81-support-des-extensions-tierces-t3d-lop-popx.md  issue-82-copy-node-connect-nodes-tools-script-helpers-error-.md  issue-84-workflow-suggestions-suggest-workflow-operator-conn.md  issues-85-90-network-templates-experimental-builds.md  phase-2-capture-lesson-tool.md  (+7 more)
scripts/: complexity_report.py  sync_agent_skills.py  sync_modules.py  update-mcp.mjs
tasks/: epic6-adr.md  epic6-audit.md  lessons.md  todo.md
(+955 files in other folders)
