[project]
name = "td-docker"
version = "0.1.0"
requires-python = ">=3.11"

# ── dependency-groups (PEP 735) ───────────────────────────────────
[dependency-groups]
dev = [
  "ruff>=0.8",
  "pyright>=1.1",
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-randomly>=1.2",
]
# deps td_server nécessaires pour collecter ses tests
td-server = [
  "connexion[swagger-ui]>=2.6.0,<=2.14.2",
  "swagger-ui-bundle>=0.0.2",
  "python-dateutil>=2.6.0",
  "setuptools>=21.0.0",
  "Flask==2.1.1",
  "Flask-Testing==0.8.1",
]

# ── uv ────────────────────────────────────────────────────────────
[tool.uv]
package = false
default-groups = ["dev", "td-server"]

# ── ruff ──────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["modules"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
  "E101",   # mixed spaces and tabs
  "W191",   # tabs
]

[tool.ruff.lint.per-file-ignores]
# Code généré — exclure du linting
"modules/td_server/openapi_server/*" = ["ALL"]
"modules/mcp/controllers/generated_handlers.py" = ["ALL"]
"modules/mcp/controllers/api_controller.py" = ["F403"]

[tool.ruff.lint.isort]
known-first-party = ["mcp", "utils"]

# ── pyright ───────────────────────────────────────────────────────
[tool.pyright]
pythonVersion = "3.11"
include = ["modules"]
exclude = [
  "modules/td_server/openapi_server",
  "modules/mcp/controllers/generated_handlers.py",
]
typeCheckingMode = "basic"
reportMissingImports = "warning"

# ── pytest ────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["modules"]
pythonpath = ["modules", "modules/td_server"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = '-m "not integration"'
markers = [
  "integration: generated OpenAPI integration tests (require Flask test server)",
]

# ── coverage ─────────────────────────────────────────────────────
[tool.coverage.run]
source = ["modules/mcp", "modules/utils", "modules/td_helpers"]
omit = [
  "modules/td_server/*",
  "modules/mcp/controllers/generated_handlers.py",
  "modules/mcp/controllers/api_controller.py",
  "modules/tests/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.",
]
