[project]
name = "td-starter-pack"
version = "0.1.0"
requires-python = ">=3.11"

# ── dependency-groups (PEP 735) ───────────────────────────────────
[dependency-groups]
dev = [
  "ruff>=0.8",
  "pyright>=1.1",
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-randomly>=1.2",
]
# deps td_server nécessaires pour collecter ses tests
td-server = [
  "connexion[swagger-ui]>=2.6.0,<=2.14.2",
  "swagger-ui-bundle>=0.0.2",
  "python-dateutil>=2.6.0",
  "setuptools>=21.0.0",
  "Flask==2.1.1",
  "Flask-Testing==0.8.1",
]

# ── uv ────────────────────────────────────────────────────────────
[tool.uv]
package = false
default-groups = ["dev", "td-server"]

# ── ruff ──────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["modules"]

[tool.ruff.lint]
select = [
  # ── baseline ──
  "E",      # pycodestyle errors
  "F",      # pyflakes
  "W",      # pycodestyle warnings
  "I",      # isort
  "UP",     # pyupgrade — modernise syntax to 3.11+
  "B",      # flake8-bugbear
  "SIM",    # flake8-simplify
  "RUF",    # ruff-specific
  # ── agent-era guardrails ──
  "T20",    # no leftover print()
  "C4",     # clean comprehensions
  "RET",    # clean returns
  "PIE",    # no-op code
  "PERF",   # perf anti-patterns
  "FURB",   # modern idioms
  "S",      # flake8-bandit — security basics
  "ARG",    # unused arguments
  "ISC",    # implicit string concat
  "TC",     # type-checking imports
]
ignore = [
  "E101",   # mixed spaces and tabs (TD uses tabs)
  "W191",   # tabs
  "ISC001", # conflicts with ruff format
  "RET504", # unnecessary assignment before return — often clearer
]

[tool.ruff.lint.per-file-ignores]
# generated code — exclude entirely
"modules/td_server/openapi_server/*" = ["ALL"]
"modules/mcp/controllers/generated_handlers.py" = ["ALL"]
# TD callbacks have fixed signatures with unused params
"modules/td_helpers/*" = ["ARG001"]
# api_controller: star re-export + TD callback signatures
"modules/mcp/controllers/api_controller.py" = ["F403", "ARG002"]
# openapi_router: schema_path kept for interface compat
"modules/mcp/controllers/openapi_router.py" = ["ARG001"]
# api_service: eval/exec/subprocess are intentional (MCP executes TD scripts)
"modules/mcp/services/api_service.py" = ["S102", "S307", "S110", "S603"]
# webserver script: print is TD logging, callbacks have fixed signatures
"modules/mcp_webserver_script.py" = ["T20", "ARG001"]
# logging util: print is the output mechanism
"modules/utils/utils_logging.py" = ["T20"]
# tests: print, assert, hardcoded values, unused params all expected
"modules/tests/*" = ["T20", "S", "ARG"]

[tool.ruff.format]
exclude = ["modules/td_server/openapi_server/*"]

[tool.ruff.lint.isort]
known-first-party = ["mcp", "utils"]

# ── pyright ───────────────────────────────────────────────────────
[tool.pyright]
pythonVersion = "3.11"
include = ["modules"]
exclude = [
  "modules/td_server/openapi_server",
  "modules/mcp/controllers/generated_handlers.py",
  "modules/tests",
]
typeCheckingMode = "basic"
reportMissingImports = "warning"

# ── pytest ────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["modules"]
pythonpath = ["modules", "modules/td_server"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = '-m "not integration"'
markers = [
  "integration: generated OpenAPI integration tests (require Flask test server)",
]

# ── coverage ─────────────────────────────────────────────────────
[tool.coverage.run]
source = ["modules/mcp", "modules/utils", "modules/td_helpers"]
omit = [
  "modules/td_server/*",
  "modules/mcp/controllers/generated_handlers.py",
  "modules/mcp/controllers/api_controller.py",
  "modules/tests/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.",
]
