[project]
name = "td-docker"
version = "0.1.0"
description = "Docker container lifecycle management for TouchDesigner"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pyright>=1.1",
]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
pythonpath = ["python"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["python"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.pyright]
pythonVersion = "3.11"
include = ["python/td_docker"]
exclude = ["python/tests"]
typeCheckingMode = "standard"
